# roadmap_sh

./: LICENSE  README.md
task-tracker/: README.md  pyproject.toml
task-tracker/src/: __main__.py  task.py  taskorganizer.py
task-tracker/tests/: test_tasks.py
weather_api/: pyproject.toml
weather_api/src/: app.py  datacache.py  weatherdata.py
