[project]
name = "weather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-limiter>=3.10.1",
    "python-redis-cache>=4.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
]
